# AlekSIS-App-Chronos

./: CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
aleksis/apps/chronos/: admin.py  apps.py  dashboard.py  filters.py  forms.py  m2l.py  managers.py  menus.py  min_max.py  mixins.py  model_extensions.py  models.py  pdf.py  preferences.py  rules.py  settings.py  tables.py  urls.py  util.py  views.py
aleksis/apps/chronos/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/chronos/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/chronos/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/chronos/locale/la/LC_MESSAGES/: django.po
aleksis/apps/chronos/locale/nb_NO/LC_MESSAGES/: django.po
aleksis/apps/chronos/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/chronos/migrations/: 0001_initial.py  0002_school_term_validity.py  0003_school_term_validity_fixes.py  0004_room_name_not_unique.py  0005_auto_20200110_1637.py  0005_remove_school_related.py  0006_extended_data.py  0007_advanced_models_from_untis.py  0007_auto_20200202_2117.py  0008_break_period.py  0009_extended_data.py  0010_absence_reason_name.py  0011_absence_for_groups_and_rooms.py  0012_event_remove_absence_reason.py  0013_event_title_optional.py  0014_extra_lesson.py  0015_rename_abbrev_to_short_name.py  0016_add_globalpermissions.py
aleksis/apps/chronos/static/css/chronos/: timetable.css
aleksis/apps/chronos/static/js/chronos/: date_select.js  week_select.js
aleksis/apps/chronos/templates/chronos/: all.html  edit_substitution.html  fallback.html  groups.html  hint_form.html  hints.html  lesson.html  lessons_day.html  my_timetable.html  myplan.html  period_time.html  plan.html  quicklaunch.html  substitution.html  substitutionprint.html  substitutions.html  substitutions_print.html  timetable.html  tt_lesson.html  tt_week.html  widget.html
aleksis/apps/chronos/templates/chronos/partials/: datepicker.html  elements.html  event.html  extra_lesson.html  groups.html  groups_part.html  headerbox.html  lesson.html  lessons_col.html  room.html  (+4 more)
aleksis/apps/chronos/templates/timetable/: all.html  hints.html  myplan.html  plan.html  quicklaunch.html
aleksis/apps/chronos/templatetags/: common.py  date_js.py  week_helpers.py
aleksis/apps/chronos/util/: build.py  chronos_helpers.py  date.py  format.py  js.py  min_max.py  predicates.py  prev_next.py
biscuit/apps/chronos/: __init__.py  apps.py  forms.py  menus.py  model_extensions.py  models.py  tables.py  urls.py  util.py  views.py
biscuit/apps/chronos/migrations/: 0001_initial.py  0002_db_indexes.py  0002_lesson_room.py  0002_make_unique.py  0003_auto_20190907_1419.py  0003_lesson_substitution.py  0003_lessonsubstitution_canceled.py  0003_substitution_cancelled_or_subject.py  0004_auto_20190821_1550.py  0004_room_name_not_unique.py  0005_school_related.py
biscuit/apps/chronos/templates/chronos/: edit_substitution.html  lessons_day.html  lessons_list.html  substitutions.html  tt_day.html  tt_lesson.html  tt_week.html
biscuit/apps/chronos/templatetags/: week_helpers.py
(+14 files in other folders)
