[tool.poetry]
name = "AlekSIS-App-Chronos"
version = "2.0a1"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"
include = ["CHANGELOG.rst", "LICENCE.rst"]

description = "AlekSIS (School Information System) — App Χρόνος (digital timetables)"
authors = ["Dominik George <dominik.george@teckids.org>", "Julian Leucker <leuckeju@katharineum.de>", "Frank Poetzsch-Heffter <p-h@katharineum.de>", "Tom Teichler <tom.teichler@teckids.org>", "Jonathan Weth <wethjo@katharineum.de>", "Hangzhi Yu <yuha@katharineum.de>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/AlekSIS/Official/AlekSIS-App-Chronos"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
calendarweek = "^0.4.4"
AlekSIS = { path = "../../.." }

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
